force-app/main/default/objects/Lesson__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the lesson has been archived. Archived lessons are hidden from players but remain for historical reporting. Prevents hard deletes with active progress records.</description>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>