force-app/main/default/objects/Lesson__c/fields/Content_Body__c.field-meta.xml
<CustomField>
    <fullName>Content_Body__c</fullName>
    <inlineHelpText>Main content for Markdown or HTML lessons</inlineHelpText>
    <label>Content Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>