force-app/main/default/objects/Lesson__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <inlineHelpText>Estimated time to complete this lesson in minutes</inlineHelpText>
    <label>Duration Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>