force-app/main/default/objects/Lesson__c/fields/External_URL__c.field-meta.xml
<CustomField>
    <fullName>External_URL__c</fullName>
    <inlineHelpText>Link to external content (videos, documents, etc.)</inlineHelpText>
    <label>External URL</label>
    <type>Url</type>
</CustomField>