force-app/main/default/objects/Lesson__c/fields/Modal_Size__c.field-meta.xml
<CustomField>
    <fullName>Modal_Size__c</fullName>
    <label>Modal Size</label>
    <description>Controls the size of the lesson modal when this lesson is displayed</description>
    <inlineHelpText>Choose the modal window size: Medium (default), Large, or X-Large</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>large</fullName>
                <label>Large</label>
            </value>
            <value>
                <fullName>x-large</fullName>
                <label>X-Large</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>