force-app/main/default/objects/Lesson__c/fields/Show_Complete_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Complete_Button__c</fullName>
    <label>Show Complete Button</label>
    <description>Controls whether the Complete button is shown on the lesson modal. When checked, learners can mark the lesson complete. When unchecked, the button is hidden.</description>
    <inlineHelpText>Check to show the Complete button on this lesson. Leave unchecked to hide it (useful for auto-complete lessons or informational content).</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>